counter overflow fix

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -11,9 +11,11 @@
   &__counter {
     text-align: center;
     line-height: 1em;
+    user-select: none;
   }
   &__message {
     text-align: center;
     margin-top: 0.5em;
+    user-select: none;
   }
 }
